--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI='mongodb+srv://nishathsyed95:eoRuAInb10WR2yVK@cluster0.mqnk1.mongodb.net/IOT?retryWrites=true&w=majority&appName=Cluster0'
+MONGO_URI='your_mongodb_url'
